--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,412 @@
-.accordion-custom{
+/* write media queries for the main page check everything for mac and lower screens*/
+  
+.body{
+    background: linear-gradient(90deg, #FFFFFF, 100%, #FEFCFC, 100%);
+    font-family: 'Montserrat', sans-serif;
+    width: 100%;
+}
+
+.custom-navbar{
+    background-color: #FFFFFF;
+}
+
+.navbar-container{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+}
+
+.navbar-login{
+    border-radius: 20px;
+    color: black;
+    background-color: #DEE21C;
+    padding: 10px 20px;
+    margin-right: 20px;
+    text-decoration: none;
+    border: none;
+    transition: background-color 0.5s;
+}
+
+.navbar-login:hover{
+    background-color: #DDE118;
+}
+
+.navbar-register{
+    color: black;
+    text-decoration: none;
+    transition: text-shadow 0.5s;
+}
+
+.navbar-register:hover{
+    text-shadow: 10px 10px 0px #DC4530;
+}
+
+/* hero-section */
+.hero-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.hero-container-top{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.hero-container-top h1{
+    text-align: center;
+    font-size: 150px;
+    font-weight: bold;
+    letter-spacing: -0.1;
+    margin: 50px;
+}
+
+.hero-container-top p{
+    color: transparent;
+    background: linear-gradient(#3860EE, #3D894E);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    text-shadow: 0px 3px 3px rgba(255,255,255,0.5);
+    font-size: 50px;
+    font-weight: 650;
+    width: 50%;
+    line-height: 1;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.hero-container-top a{
+    text-decoration: none;
+    color: white;
+    background-color: #A53A3A;
+    padding: 15px 40px;
+    border-radius: 10px;
+    border: none;
+    margin-bottom: 50px;
+    font-size: 20px;
+    transition: background-color 0.5s;
+}
+
+.hero-container-top a:hover{
+    background-color: #832F2F;
+}
+
+.hero-container-bottom img{
+    border-radius: 20px;
+}
+
+.what-we-offer-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center; */
+}
+
+.what-we-offer-container-head{
+    display: flex;
+    flex-direction: column;
+    margin-top: 100px;
+}
+
+.what-we-offer-container-head h1{
+    color: transparent;
+    background: linear-gradient(#3860EE, #3D894E);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    text-shadow: 0px 3px 3px rgba(255,255,255,0.5);
+    font-size: 50px;
+    font-weight: 650;
+    line-height: 1;
+    text-align: center;
+    z-index: 1;
+}
+
+.what-we-offer-container-body-one{
+    margin-top: 50px;
+    display: flex;
+    gap: 50px;
+}
+
+.what-we-offer-container-body-one button{
+    border: none;
+    font-weight: 600;
+    border-radius: 10px;
+}
+
+.what-we-offer-container-body-one button:nth-child(1){
+    padding: 20px 53px;
+}
+
+.what-we-offer-container-body-one button:nth-child(2){
+    padding: 20px 40px;
+}
+
+.what-we-offer-container-body-two{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
+.what-we-offer-container-body-two .offer-div{
+    margin-top: 50px;
+    width: 300px;
+    height: 400px;
+    border-radius: 20px;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(248, 248, 248, 0.7) 100%);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+}
+
+.what-we-offer-container-tail{
+    display: flex;
+}
+
+.offer-horizontal-div{
+    width: 940px;
+    height: 300px;
+    border-radius: 20px;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(248, 248, 248, 0.7) 100%);
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
+    margin-top: 10px;
+}
+
+.q-and-a-container{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
+    margin-top: 100px;
+    gap: 50px;
+}
+
+.q-and-a-container-container-left{
+    width: 15%;
+}
+
+.q-and-a-container-container-left h1{
+    color: black;
+    font-weight: 600;
+    font-size: 50px;
+}
+
+.custom-accordin{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 100px;
+}
+
+.action-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.action-container h1{
+    text-align: center;
+    color: transparent;
+    background: linear-gradient(#3860EE, #3D894E);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    text-shadow: 0px 3px 3px rgba(255,255,255,0.5);
+    font-size: 50px;
+    font-weight: 650;
+    line-height: 1;
+    margin-bottom: 60px;
+}
+
+.action-container a{
+    text-decoration: none;
+    color: white;
+    background-color: #A53A3A;
+    padding: 15px 40px;
+    border-radius: 10px;
+    border: none;
+    margin-bottom: 50px;
+    font-size: 20px;
+    transition: background-color 0.5s;
+}
+
+.powered-by-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin: 50px 0;
+}
+
+.container-item{
+    display: flex;
+    padding: 30px 20px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 60vh;
+    background-color: black;
+    gap: 50px;
+    width: 60%;
+    border-radius: 30px;
+}
+
+.container-item div:nth-child(1) h1{
+    color: #426599;
+    font-size: 35px;
+    font-weight: 600;
+}
+
+/* register */
+
+.tab { 
+    cursor: pointer;
+    padding: 10px;
+    background-color: #eee;
+    display: inline-block;
+    transition: background-color 0.8s;
+}
+
+.active-tab { 
+    background-color: #ccc; 
+}
+
+#instructorTab { 
+    margin-left: -4px;
+}
+
+.tab-container{
+    display: flex;
+    margin-bottom: 40px;
+}
+
+.tab-container div{
+    color: black;
+    font-size: 30px;
+    font-weight: bold;
+    letter-spacing: 1;
+}
+
+.tab-container div:nth-child(1){
+    border-radius: 10px 0 0 10px;
+    padding: 20px 85px;
+}
+
+.tab-container div:nth-child(2){
+    border-radius: 0 10px 10px 0;
+    padding: 20px 60px;
+}
+
+.form-container-main{
+    display: flex;
+    width: 100%;
+    min-height: 100vh;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(248, 248, 248, 0.7) 100%)
+}
+
+.form-container{ 
+    width: 70%;
+    min-height: 80vh;
+    padding: 20px; 
+    background: rgba(252,252,252, 0.7);
+    border-radius: 30px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+    display: flex;
+    padding: 50px 0;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.form-field { 
+    margin-bottom: 10px; 
     width: 50%;
 }
+
+.form-field input{
+    border: none;
+    border-radius: 5px;
+    box-sizing: border-box;
+    padding: 20px;
+    width: 100%;
+    transition: box-shadow 0.5s;
+}
+
+.form-field input:hover{
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+}
+
+.form-field input:focus{
+    border: none;
+    outline: none;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+}
+
+.form-field:nth-child(odd) input{
+    background-color: #F0ECEC;
+}
+
+.form-field:nth-child(even) input{
+    background-color: #D8D8D8;
+}
+
+.form-container button{
+    border: none;
+    border-radius: 20px;
+    color: black;
+    background-color: rgba(200, 248, 8, 0.8);
+    padding: 15px 40px;
+    font-size: 25px;
+    transition: background-color 0.6s, color 0.6s;
+}
+
+.form-container button:hover{
+    background-color: rgb(215, 222, 10);
+    color: rgb(33, 25, 25);
+}
+
+.hidden { 
+    display: none; 
+}
+
+/* media queries */
+@media (max-width: 1500px) {
+
+    .form-container h2{
+        font-size: 24px;
+    }
+
+    .form-container button{
+        font-size: 16px;
+    }
+
+    .form-field input{
+        padding: 10px;
+    }
+
+    .tab-container div{
+        font-size: 26px;
+    }
+
+    .tab-container{
+        margin-bottom: 25px;
+    }
+
+    .tab-container div:nth-child(1){
+        padding: 15px 85px;
+    }
+    
+    .tab-container div:nth-child(2){
+        padding: 15px 60px;
+    }
+}
+
