--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,55 @@
 <%-include('partials/header')-%>
-<div class="accordion accordion-custom" id="accordionExample">
+
+<nav class="navbar navbar-light custom-navbar">
+  <div class="navbar-container">
+      <div class="navbar-container-left">
+          <a class="navbar-brand" href="#">
+              <img src="/docs/4.1/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
+            </a>
+      </div>
+      <div class="navbar-container-right">
+          <a href="/login" class="navbar-login">LOGIN</a>
+          <a href="/register" class="navbar-register">REGISTER</a>
+      </div>
+  </div>
+</nav>
+
+<div class="hero-container">
+  <div class="hero-container-top">
+    <h1>EDUCATOR AI</h1>
+    <p>Expert AI tutor bots for all subjects, or create your own from books and PDFs 
+      with ease!</p>
+    <a href="" class="hero-container-top-button-get-started">GET STARTED</a>
+  </div>
+  <div class="hero-container-bottom">
+    <img src="images/product-image.png" alt="product-image">
+  </div>
+</div>
+
+<div class="what-we-offer-container">
+  <div class="what-we-offer-container-head">
+    <span><h1>WHAT WE OFFER</h1></span>
+    <!-- <span><img src="images/reinvent.gif" alt=""></span> -->
+  </div>
+  <div class="what-we-offer-container-body-one">
+    <button>STUDENTS</button>
+    <button>INSTRUCTORS</button>
+  </div>
+  <div class="what-we-offer-container-body-two">
+    <div class="offer-div"></div>
+    <div class="offer-div"></div>
+    <div class="offer-div"></div>
+  </div>
+  <div class="what-we-offer-container-tail">
+    <div class="offer-horizontal-div"></div>
+  </div>
+</div>
+
+<div class="q-and-a-container">
+  <div class="q-and-a-container-container-left">
+    <h1>Common Q/A</h1>
+  </div>
+  <div class="accordion custom-accordin" id="accordionExample">
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingOne">
         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -36,5 +86,36 @@
         </div>
       </div>
     </div>
+        <div class="accordion-item">
+      <h2 class="accordion-header" id="headingFour">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+          Accordion Item #4
+        </button>
+      </h2>
+      <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+          <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+        </div>
+      </div>
+    </div>
   </div>
+</div>
+
+<div class="action-container">
+  <h1>Why Wait Any More?</h1>
+  <a href="">TRY US</a>
+</div>
+
+<div class="powered-by-container">
+  <div class="container-item">
+    <div>
+      <h1>POWERED BY</h1>
+    </div>
+    <div>
+      <img src="images/azure.png" alt="azure ai image">
+      <img src="images/cosmos.png" alt="cosmos db image">
+    </div>
+  </div>
+</div>
+
 <%-include('partials/footer')-%>
