--- a/views/login-instructor.ejs
+++ b/views/login-instructor.ejs
@@ -16,9 +16,10 @@
   <div class="form-field">
     <input type="password" id="instructorPassword" placeholder="PASSWORD" name="password" required>
     <p class="alert-email-check hidden instructorPasswordRequired">Please enter a password</p>
+    <p class="alert alert-danger wrongPasswordAlert hidden" role="alert" id="wrongPasswordAlert">Wrong Password!</p>
   </div>
-  <div>Need help logging in? <a href="#" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Reset your password</a></div>
-  <div>Don't have a account? <a href="/register-instructor">Create one</a></div>
+  <div><p>Need help logging in? <a href="#" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Reset your password</a></p>
+  <p>Don't have a account? <a href="/register-instructor">Create one</a></p></div>
   <div type="submit" id="instructorLoginButton" class="loginButton"><span class="none">LOGIN</span></div>
 </div>
 </div>
@@ -31,10 +32,28 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <p>As this is still a test application password reset functionality is not active</p>
+        <p>As this is still a test application, password reset functionality is not active</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="redirectToRegsiter" tabindex="-1" aria-labelledby="redirectToRegsiterLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="redirectToRegsiterLabel" style="text-align: center;">Login Failed.</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Seems like this email is not registered with us. Create a new account, or try logging with a other email</p>
+      </div>
+      <div class="modal-footer custom-modal-footer">
+        <button type="button" class="btn btn-secondary custom-modal-button" data-bs-dismiss="modal" id="tryLoginAgainButton">Try Login Again</button>
+        <button type="button" class="btn btn-primary custom-modal-button" data-bs-dismiss="modal"><a href="/register-instructor">Register Now</a></button>
       </div>
     </div>
   </div>
@@ -44,22 +63,20 @@
   document.getElementById('instructorLoginButton').addEventListener('click', function(event) {
       event.preventDefault(); 
   
-      // Hide previous error messages
       document.querySelector('.instructorEmailRequired').classList.add('hidden');
       document.querySelector('.instructorPasswordRequired').classList.add('hidden');
+      document.getElementById('wrongPasswordAlert').classList.add('hidden');
   
       let email = document.getElementById('instructorEmail').value.trim();
       let password = document.getElementById('instructorPassword').value;
   
       let isValid = true;
   
-      // Validate Email
       if (!email.includes('@')) {
           document.querySelector('.instructorEmailRequired').classList.remove('hidden');
           isValid = false;
       }
   
-      // Validate Password
       if (!password) {
           document.querySelector('.instructorPasswordRequired').classList.remove('hidden');
           isValid = false;
@@ -88,13 +105,30 @@
           if (response.ok) {
               return response.json(); 
           }
+          if(response.status === 400) {
+            return response.json().then(data => {
+              throw new Error(data.notFound || 'User not found')
+            });
+          }
+          if(response.status === 401){
+            return response.json().then(data => {
+              throw new Error(data.incorrectPassword || 'Incorrect password')
+            })
+          }
           throw new Error('Network response was not ok');
       })
       .then(data => {
           window.location.href = data.redirectUrl;
       })
       .catch(error => {
-          console.error('There has been a problem with your fetch operation:', error);
+        if (error.message === 'User Not Found') {
+            var modal = new bootstrap.Modal(document.getElementById('redirectToRegsiter'));
+            modal.show();
+        } else if(error.message === 'Incorrect password'){
+          document.getElementById('wrongPasswordAlert').classList.remove('hidden')
+        }else {
+            console.error('There has been a problem with your fetch operation:', error);
+        }
           instructorLoginButton.classList.remove('disabled');
           span.classList.remove('loader');
           span.innerHTML = 'LOGIN';  
