--- a/views/dashboard-instructor.ejs
+++ b/views/dashboard-instructor.ejs
@@ -39,11 +39,15 @@
             </div>
         </div>
         <div class="col-sm p-3 min-vh-100 bg-light">
-            <h2>A glorious Bootstrap 5 icon sidebar menu!</h2>
-            <hr />
-            <h3>More content...</h3>
-            <p class="text-dark">Sriracha biodiesel taxidermy organic post-ironic...</p>
-            <!-- Rest of your content -->
+            <div>
+                <h2>Books</h2>
+                <hr />
+            </div>
+            <div>
+               <hr>
+
+            </div>
+            
         </div>
     </div>
 </div>
