--- a/views/dashboard-student.ejs
+++ b/views/dashboard-student.ejs
@@ -39,11 +39,19 @@
             </div>
         </div>
         <div class="col-sm p-3 min-vh-100 bg-light">
-            <h2>A glorious Bootstrap 5 icon sidebar menu!</h2>
-            <hr />
-            <h3>More content...</h3>
-            <p class="text-dark">Sriracha biodiesel taxidermy organic post-ironic...</p>
-            <!-- Rest of your content -->
+            <div>
+                <h2>Books</h2>
+                <hr />
+                <div class="book-add-card">
+                    <i class="bi-journal-plus fs-1"></i>
+                </div>
+            </div>
+            <div>
+               <hr>
+               <div>
+
+               </div>
+            </div>
         </div>
     </div>
 </div>
