--- a/views/dashboard-instructor.ejs
+++ b/views/dashboard-instructor.ejs
@@ -2,22 +2,20 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-auto bg-dark sticky-top custom-sidebar-main">
+        <div class="col-sm-auto sticky-top bg-dark custom-sidebar-main">
             <div class="d-flex flex-sm-column flex-row flex-nowrap bg-dark align-items-center sticky-top">
-
                 <a href="/" class="d-block p-3 link-light text-decoration-none" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Icon-only">
                     <i class="bi-bootstrap fs-1"></i>
                 </a>
-           
-                <ul class="nav nav-pills nav-flush flex-sm-column flex-row flex-nowrap mb-auto mx-auto text-center justify-content-between w-100 px-3 align-items-center">
-                    <li class="nav-item">
-                        <a href="#" class="nav-link py-3 px-2 text-white" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Dashboard">
-                            <div class="custom-menu-item"><i class="bi-speedometer2 fs-1"></i><span class="ms-1 d-none d-sm-inline">Dashboard</span></div>
+                <ul class="nav nav-pills nav-flush flex-sm-column flex-row flex-nowrap mb-auto mx-auto text-center justify-content-center w-100 align-items-center">
+                    <li class="nav-item w-100" >
+                        <a href="#" class="nav-link py-3 px-2 text-white w-100" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Dashboard">
+                            <div class="custom-menu-item w-100 custom-menu-item-selected" id="studentDashBoard"><i class="bi-speedometer2 fs-1"></i><span class="ms-1 d-none d-sm-inline">Dashboard</span></div>
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link py-3 px-2 text-white" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Calendar">
-                            <div class="custom-menu-item"><i class="bi-tools fs-1"></i><span class="ms-1 d-none d-sm-inline">Other Tools</span></div>
+                    <li class="nav-item w-100">
+                        <a href="#" class="nav-link py-3 px-2 text-white w-100" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Other Tools">
+                            <div class="custom-menu-item w-100" id="studentOtherTools"><i class="bi-tools fs-1"></i><span class="ms-1 d-none d-sm-inline">Other Tools</span></div>
                         </a>
                     </li>
                 </ul>
@@ -38,18 +36,76 @@
                 </ul>
             </div>
         </div>
-        <div class="col-sm p-3 min-vh-100 bg-light">
-            <div>
-                <h2>Books</h2>
-                <hr />
-            </div>
-            <div>
-               <hr>
-
-            </div>
-            
+        <div class="col-sm min-vh-100 custom-content-main">
+           <div class="dashboard-content-student">
+               <div class="dashboard-content-top-instructor">
+                    <h2>YOUR CLASS BOOKS</h2>
+                    <hr />
+                    <div class="student-book-add-container">
+                        <div class="book-add-card" data-bs-toggle="modal" data-bs-target="#addBookStudent">
+                            <i class="bi-journal-plus fs-1"></i>
+                            <p>ADD BOOK</p>
+                        </div>
+                    </div>
+               </div>
+           </div>
+           <div class="other-tools-content hidden">
+                <img src="images/coming-soon.png" alt="Coming Soon Image">
+           </div>
         </div>
     </div>
 </div>
 
+<div class="modal fade custom-height-modal" id="addBookStudent"  data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="addBookStudentLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content custom-modal-bookcode-container">
+        <div class="custom-modal-header">
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div>
+            <h1 class="modal-title fs-5 custom-title-modal" id="addBookStudentLabel">ADD A CLASS</h1>
+        </div>
+        <div class="modal-body custom-modal-body-add-book instructor-modal-input">
+            <input type="text" id="classNameInstructor" placeholder="CLASS NAME" name="instructorClassName" required>
+            <select name="Books" id="lang" class="select-box">
+                <option value="none">Select a Book for this Class</option>
+                <option value="financial_accounting">Financial Accounting by Walter T. Harrison Jr.</option>
+                <option value="managerial_accounting">Managerial Accounting by Ray H. Garrison</option>
+                <option value="campbell_biology">Campbell Biology by Lisa A. Urry</option>
+                <option value="molecular_biology">Molecular Biology of the Cell by Bruce Alberts</option>
+                <option value="principles_of_economics">Principles of Economics by N. Gregory Mankiw</option>
+                <option value="guns_germs_steel">Guns, Germs, and Steel by Jared Diamond</option>                
+            </select>
+        </div>
+        <div class="custom-modal-footer-add-book modal-instructor-footer">
+          <button type="button" class="btn custom-close-button" data-bs-dismiss="modal">CLOSE</button>
+          <button type="button" class="btn" id="addBookStudentModalButton">ADD CLASS</button>
+        </div>
+      </div>
+    </div>
+</div>
+
+<script>
+    var studentDashboardButton = document.getElementById('studentDashBoard');
+    var studentOtherToolsButton = document.getElementById('studentOtherTools');
+
+    studentDashboardButton.addEventListener('click', function(event) {
+        event.preventDefault(); 
+        studentOtherToolsButton.classList.remove('custom-menu-item-selected');
+        studentDashboardButton.classList.add('custom-menu-item-selected');
+        document.querySelector('.dashboard-content-student').classList.remove('hidden');
+        document.querySelector('.other-tools-content').classList.remove('style-other-tools');
+        document.querySelector('.other-tools-content').classList.add('hidden');
+    });
+
+    studentOtherToolsButton.addEventListener('click', function(event) {
+        event.preventDefault();
+        studentDashboardButton.classList.remove('custom-menu-item-selected');
+        studentOtherToolsButton.classList.add('custom-menu-item-selected');
+        document.querySelector('.dashboard-content-student').classList.add('hidden');
+        document.querySelector('.other-tools-content').classList.remove('hidden');
+        document.querySelector('.other-tools-content').classList.add('style-other-tools');
+    });
+
+</script>
 <%-include('partials/footer')-%>
